--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,28 @@
 body {
-  padding: 20px;
+  padding: 0;
+  margin: 0;
+  background-color: white;
+}
+
+ul#buttons {
+  padding: 0;
+  margin: 0;
+}
+
+ul#buttons a {
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 10px 10px;
+  text-decoration: none;
+  cursor: pointer;
+  color: #666;
+  font-size: 12px;
+
+  border-bottom: 1px solid #e2e2e2;
+  white-space: nowrap;
+}
+
+ul#buttons a:hover {
+  background-color: #f0f0ff;
 }
